ast.output
Terminals unused in grammar

   SPCHAR


Grammar

    0 $accept: st $end

    1 st: DOCTYPE HTMLOP html
    2   | HTMLOP html
    3   | consumetop DOCTYPE HTMLOP html
    4   | consumetop HTMLOP html
    5   | consumetop DOCTYPE consumetop HTMLOP html

    6 html: head body HTMLCL
    7     | head body HTMLCL consumetop

    8 head: HEADOP title HEADCL
    9     | HEADOP HEADCL
   10     | HEADOP consumetop HEADCL
   11     | consumetop HEADOP title HEADCL
   12     | consumetop HEADOP HEADCL
   13     | consumetop HEADOP consumetop HEADCL

   14 title: TITLEOP TITLECL
   15      | TITLEOP consumetext TITLECL
   16      | consumetop TITLEOP TITLECL
   17      | consumetop TITLEOP consumetext TITLECL
   18      | TITLEOP TITLECL consumetop
   19      | TITLEOP consumetext TITLECL consumetop
   20      | consumetop TITLEOP TITLECL consumetop
   21      | consumetop TITLEOP consumetext TITLECL consumetop

   22 body: BODYOP flow BODYCL
   23     | BODYOP BODYCL
   24     | consumetop BODYOP flow BODYCL
   25     | consumetop BODYOP BODYCL
   26     | BODYOP flow BODYCL consumetop
   27     | BODYOP BODYCL consumetop
   28     | consumetop BODYOP flow BODYCL consumetop
   29     | consumetop BODYOP BODYCL consumetop

   30 misctop: COMMENT

   31 consumetop: consumetop misctop
   32           | misctop

   33 misctext: TEXT

   34 consumetext: consumetext misctext
   35            | misctext

   36 misc: COMMENT
   37     | BR
   38     | TEXT
   39     | IMGOP img
   40     | SYMBOL

   41 consume: consume misc
   42        | misc

   43 miscph: misc
   44       | AOP atagph
   45       | FONTOP fontph
   46       | CENTEROP centerph

   47 consumeph: consumeph miscph
   48          | miscph

   49 flow: BPHRASEOP phraseopen
   50     | GTPHOP gtph
   51     | LOP list
   52     | misc flow
   53     | misc
   54     | DIVOP div
   55     | DLOP dl
   56     | TABOP table
   57     | FIGOP figure
   58     | AOP atag
   59     | FONTOP font
   60     | CENTEROP center

   61 center: flow CENTERCL
   62       | flow CENTERCL flow
   63       | CENTERCL
   64       | CENTERCL flow

   65 phraseopen: phrases BPHRASECL flow
   66           | BPHRASECL flow
   67           | BPHRASECL
   68           | phrases BPHRASECL
   69           | consumeph BPHRASECL flow
   70           | consumeph BPHRASECL

   71 phrases: PHRASEOP phr
   72        | consumeph PHRASEOP phr

   73 phr: PHRASECL
   74    | phrases PHRASECL
   75    | PHRASECL phrases
   76    | PHRASECL consumeph
   77    | consumeph PHRASECL
   78    | consumeph PHRASECL phrases
   79    | consumeph PHRASECL consumeph

   80 fontph: ATTRIBUTE ATTRIBUTEVAL FONTOOP FONTCL
   81       | ATTRIBUTE ATTRIBUTEVAL FONTOOP phrases FONTCL
   82       | FONTOOP phrases FONTCL
   83       | ATTRIBUTE ATTRIBUTEVAL FONTOOP consumeph FONTCL
   84       | FONTOOP consumeph FONTCL

   85 atagph: ATTRIBUTE ATTRIBUTEVAL AOPOP phrases ACL
   86       | AOPOP phrases ACL
   87       | ATTRIBUTE ATTRIBUTEVAL AOPOP BPHRASEOP phraseopen ACL
   88       | AOPOP BPHRASEOP phraseopen ACL
   89       | ATTRIBUTE ATTRIBUTEVAL AOPOP consumeph ACL
   90       | AOPOP consumeph ACL
   91       | AOPOP ACL
   92       | ATTRIBUTE ATTRIBUTEVAL AOPOP ACL
   93       | ATTRIBUTE ATTRIBUTEVAL AOPOP consumeph BPHRASEOP phraseopen ACL
   94       | AOPOP consumeph BPHRASEOP phraseopen ACL

   95 gtph: phrases GTPHCL flow
   96     | phrases GTPHCL
   97     | GTPHCL flow
   98     | GTPHCL
   99     | consumeph GTPHCL
  100     | consumeph GTPHCL flow
  101     | BPHRASEOP phraseopen GTPHCL flow
  102     | BPHRASEOP phraseopen GTPHCL
  103     | consumeph BPHRASEOP phraseopen GTPHCL flow
  104     | consumeph BPHRASEOP phraseopen GTPHCL

  105 centerph: phrases CENTERCL
  106         | consumeph CENTERCL
  107         | CENTERCL
  108         | BPHRASEOP phraseopen CENTERCL
  109         | consumeph BPHRASEOP phraseopen CENTERCL

  110 list: LIOP listitem list
  111     | LCL
  112     | consume LIOP listitem list
  113     | consume LCL
  114     | LCL flow
  115     | consume LCL flow

  116 listitem: flow LICL
  117         | LICL

  118 div: DIVCL
  119    | DIVCL flow
  120    | flow DIVCL flow
  121    | flow DIVCL

  122 dl: DLCL
  123   | consume DLCL
  124   | DIVOP div DLCL
  125   | consume DIVOP div DLCL
  126   | DLCL flow
  127   | consume DLCL flow
  128   | DIVOP div DLCL flow
  129   | consume DIVOP div DLCL flow
  130   | DTOP dt DLCL
  131   | DTOP dt DLCL flow
  132   | consume DTOP dt DLCL
  133   | consume DTOP dt DLCL flow

  134 dt: flow DTCL DDOP dd
  135   | flow DTCL consume DDOP dd
  136   | flow DTCL DDOP dd DTOP dt
  137   | DTCL DDOP dd
  138   | DTCL DDOP dd DTOP dt

  139 dd: flow DDCL
  140   | flow DDCL DDOP dd
  141   | DDCL
  142   | DDCL DDOP dd
  143   | flow DDCL consume
  144   | flow DDCL consume DDOP dd
  145   | DDCL consume
  146   | DDCL consume DDOP dd

  147 caption: flow CAPCL
  148        | CAPCL
  149        | flow CAPCL consume
  150        | CAPCL consume

  151 table: CAPOP caption TABCL
  152      | CAPOP caption TABCL flow
  153      | consume CAPOP caption TABCL
  154      | consume CAPOP caption TABCL flow
  155      | CAPOP caption TROP tr TABCL
  156      | TROP tr TABCL
  157      | CAPOP caption TROP tr TABCL flow
  158      | TROP tr TABCL flow
  159      | TABCL
  160      | TABCL flow
  161      | consume TROP tr TABCL
  162      | consume CAPOP caption TROP tr TABCL flow
  163      | consume TROP tr TABCL flow
  164      | consume TABCL
  165      | consume TABCL flow

  166 tr: TRCL
  167   | consume TRCL
  168   | THOP th TRCL
  169   | TDOP td TRCL
  170   | TRCL consume
  171   | consume TRCL consume
  172   | THOP th TRCL consume
  173   | TDOP td TRCL consume
  174   | TRCL TROP tr
  175   | TRCL consume TROP tr
  176   | THOP th TRCL TROP tr
  177   | TDOP td TRCL TROP tr
  178   | THOP th TRCL consume TROP tr
  179   | TDOP td TRCL consume TROP tr
  180   | consume THOP th TRCL
  181   | consume TDOP td TRCL
  182   | consume THOP th TRCL consume
  183   | consume TDOP td TRCL consume
  184   | consume TRCL TROP tr
  185   | consume TRCL consume TROP tr
  186   | consume THOP th TRCL TROP tr
  187   | consume TDOP td TRCL TROP tr
  188   | consume THOP th TRCL consume TROP tr
  189   | consume TDOP td TRCL consume TROP tr

  190 th: THCL
  191   | flow THCL
  192   | THCL consume
  193   | flow THCL consume
  194   | THCL THOP th
  195   | flow THCL THOP th
  196   | THCL consume THOP th
  197   | flow THCL consume THOP th

  198 td: TDCL
  199   | flow TDCL
  200   | TDCL consume
  201   | flow TDCL consume
  202   | TDCL TDOP td
  203   | flow TDCL TDOP td
  204   | TDCL consume TDOP td
  205   | flow TDCL consume TDOP td

  206 figure: flow FIGCAPOP figcap FIGCL
  207       | FIGCAPOP figcap FIGCL
  208       | FIGCAPOP figcap flow FIGCL
  209       | flow FIGCL
  210       | FIGCL
  211       | flow FIGCAPOP figcap FIGCL flow
  212       | FIGCAPOP figcap FIGCL flow
  213       | FIGCAPOP figcap flow FIGCL flow
  214       | flow FIGCL flow
  215       | FIGCL flow
  216       | flow FIGCAPOP figcap flow FIGCL flow
  217       | flow FIGCAPOP figcap flow FIGCL

  218 figcap: flow FIGCAPCL
  219       | FIGCAPCL

  220 img: ATTRIBUTE ATTRIBUTEVAL img
  221    | IMGCL

  222 atag: ATTRIBUTE ATTRIBUTEVAL AOPOP flow ACL flow
  223     | AOPOP flow ACL flow
  224     | AOPOP ACL flow
  225     | ATTRIBUTE ATTRIBUTEVAL AOPOP flow ACL
  226     | AOPOP flow ACL
  227     | AOPOP ACL
  228     | ATTRIBUTE ATTRIBUTEVAL AOPOP ACL flow
  229     | ATTRIBUTE ATTRIBUTEVAL AOPOP ACL

  230 font: ATTRIBUTE ATTRIBUTEVAL FONTOOP FONTCL
  231     | ATTRIBUTE ATTRIBUTEVAL FONTOOP flow FONTCL
  232     | FONTOOP flow FONTCL
  233     | ATTRIBUTE ATTRIBUTEVAL FONTOOP FONTCL flow
  234     | ATTRIBUTE ATTRIBUTEVAL FONTOOP flow FONTCL flow
  235     | FONTOOP flow FONTCL flow


Terminals, with rules where they appear

$end (0) 0
error (256)
DOCTYPE (258) 1 3 5
HTMLOP (259) 1 2 3 4 5
HTMLCL (260) 6 7
HEADOP (261) 8 9 10 11 12 13
HEADCL (262) 8 9 10 11 12 13
TITLEOP (263) 14 15 16 17 18 19 20 21
TITLECL (264) 14 15 16 17 18 19 20 21
BODYOP (265) 22 23 24 25 26 27 28 29
BODYCL (266) 22 23 24 25 26 27 28 29
BPHRASEOP (267) 49 87 88 93 94 101 102 103 104 108 109
BPHRASECL (268) 65 66 67 68 69 70
PHRASEOP (269) 71 72
PHRASECL (270) 73 74 75 76 77 78 79
GTPHOP (271) 50
GTPHCL (272) 95 96 97 98 99 100 101 102 103 104
TEXT (273) 33 38
AOPOP (274) 85 86 87 88 89 90 91 92 93 94 222 223 224 225 226 227 228
    229
AOP (275) 44 58
ACL (276) 85 86 87 88 89 90 91 92 93 94 222 223 224 225 226 227 228
    229
ATTRIBUTE (277) 80 81 83 85 87 89 92 93 220 222 225 228 229 230 231
    233 234
ATTRIBUTEVAL (278) 80 81 83 85 87 89 92 93 220 222 225 228 229 230
    231 233 234
DIVOP (279) 54 124 125 128 129
DIVCL (280) 118 119 120 121
IMGOP (281) 39
IMGCL (282) 221
FONTOP (283) 45 59
FONTOOP (284) 80 81 82 83 84 230 231 232 233 234 235
FONTCL (285) 80 81 82 83 84 230 231 232 233 234 235
LOP (286) 51
LCL (287) 111 113 114 115
LIOP (288) 110 112
LICL (289) 116 117
FIGOP (290) 57
FIGCL (291) 206 207 208 209 210 211 212 213 214 215 216 217
FIGCAPOP (292) 206 207 208 211 212 213 216 217
FIGCAPCL (293) 218 219
DLOP (294) 55
DLCL (295) 122 123 124 125 126 127 128 129 130 131 132 133
DTOP (296) 130 131 132 133 136 138
DTCL (297) 134 135 136 137 138
DDOP (298) 134 135 136 137 138 140 142 144 146
DDCL (299) 139 140 141 142 143 144 145 146
TABOP (300) 56
TABCL (301) 151 152 153 154 155 156 157 158 159 160 161 162 163 164
    165
CAPOP (302) 151 152 153 154 155 157 162
CAPCL (303) 147 148 149 150
TROP (304) 155 156 157 158 161 162 163 174 175 176 177 178 179 184
    185 186 187 188 189
TRCL (305) 166 167 168 169 170 171 172 173 174 175 176 177 178 179
    180 181 182 183 184 185 186 187 188 189
THOP (306) 168 172 176 178 180 182 186 188 194 195 196 197
THCL (307) 190 191 192 193 194 195 196 197
TDOP (308) 169 173 177 179 181 183 187 189 202 203 204 205
TDCL (309) 198 199 200 201 202 203 204 205
BR (310) 37
COMMENT (311) 30 36
SPCHAR (312)
SYMBOL (313) 40
CENTEROP (314) 46 60
CENTERCL (315) 61 62 63 64 105 106 107 108 109


Nonterminals, with rules where they appear

$accept (61)
    on left: 0
st (62)
    on left: 1 2 3 4 5, on right: 0
html (63)
    on left: 6 7, on right: 1 2 3 4 5
head (64)
    on left: 8 9 10 11 12 13, on right: 6 7
title (65)
    on left: 14 15 16 17 18 19 20 21, on right: 8 11
body (66)
    on left: 22 23 24 25 26 27 28 29, on right: 6 7
misctop (67)
    on left: 30, on right: 31 32
consumetop (68)
    on left: 31 32, on right: 3 4 5 7 10 11 12 13 16 17 18 19 20 21
    24 25 26 27 28 29 31
misctext (69)
    on left: 33, on right: 34 35
consumetext (70)
    on left: 34 35, on right: 15 17 19 21 34
misc (71)
    on left: 36 37 38 39 40, on right: 41 42 43 52 53
consume (72)
    on left: 41 42, on right: 41 112 113 115 123 125 127 129 132 133
    135 143 144 145 146 149 150 153 154 161 162 163 164 165 167 170
    171 172 173 175 178 179 180 181 182 183 184 185 186 187 188 189
    192 193 196 197 200 201 204 205
miscph (73)
    on left: 43 44 45 46, on right: 47 48
consumeph (74)
    on left: 47 48, on right: 47 69 70 72 76 77 78 79 83 84 89 90 93
    94 99 100 103 104 106 109
flow (75)
    on left: 49 50 51 52 53 54 55 56 57 58 59 60, on right: 22 24 26
    28 52 61 62 64 65 66 69 95 97 100 101 103 114 115 116 119 120 121
    126 127 128 129 131 133 134 135 136 139 140 143 144 147 149 152
    154 157 158 160 162 163 165 191 193 195 197 199 201 203 205 206
    208 209 211 212 213 214 215 216 217 218 222 223 224 225 226 228
    231 232 233 234 235
center (76)
    on left: 61 62 63 64, on right: 60
phraseopen (77)
    on left: 65 66 67 68 69 70, on right: 49 87 88 93 94 101 102 103
    104 108 109
phrases (78)
    on left: 71 72, on right: 65 68 74 75 78 81 82 85 86 95 96 105
phr (79)
    on left: 73 74 75 76 77 78 79, on right: 71 72
fontph (80)
    on left: 80 81 82 83 84, on right: 45
atagph (81)
    on left: 85 86 87 88 89 90 91 92 93 94, on right: 44
gtph (82)
    on left: 95 96 97 98 99 100 101 102 103 104, on right: 50
centerph (83)
    on left: 105 106 107 108 109, on right: 46
list (84)
    on left: 110 111 112 113 114 115, on right: 51 110 112
listitem (85)
    on left: 116 117, on right: 110 112
div (86)
    on left: 118 119 120 121, on right: 54 124 125 128 129
dl (87)
    on left: 122 123 124 125 126 127 128 129 130 131 132 133, on right:
    55
dt (88)
    on left: 134 135 136 137 138, on right: 130 131 132 133 136 138
dd (89)
    on left: 139 140 141 142 143 144 145 146, on right: 134 135 136
    137 138 140 142 144 146
caption (90)
    on left: 147 148 149 150, on right: 151 152 153 154 155 157 162
table (91)
    on left: 151 152 153 154 155 156 157 158 159 160 161 162 163 164
    165, on right: 56
tr (92)
    on left: 166 167 168 169 170 171 172 173 174 175 176 177 178 179
    180 181 182 183 184 185 186 187 188 189, on right: 155 156 157
    158 161 162 163 174 175 176 177 178 179 184 185 186 187 188 189
th (93)
    on left: 190 191 192 193 194 195 196 197, on right: 168 172 176
    178 180 182 186 188 194 195 196 197
td (94)
    on left: 198 199 200 201 202 203 204 205, on right: 169 173 177
    179 181 183 187 189 202 203 204 205
figure (95)
    on left: 206 207 208 209 210 211 212 213 214 215 216 217, on right:
    57
figcap (96)
    on left: 218 219, on right: 206 207 208 211 212 213 216 217
img (97)
    on left: 220 221, on right: 39 220
atag (98)
    on left: 222 223 224 225 226 227 228 229, on right: 58
font (99)
    on left: 230 231 232 233 234 235, on right: 59


State 0

    0 $accept: . st $end

    DOCTYPE  shift, and go to state 1
    HTMLOP   shift, and go to state 2
    COMMENT  shift, and go to state 3

    st          go to state 4
    misctop     go to state 5
    consumetop  go to state 6


State 1

    1 st: DOCTYPE . HTMLOP html

    HTMLOP  shift, and go to state 7


State 2

    2 st: HTMLOP . html

    HEADOP   shift, and go to state 8
    COMMENT  shift, and go to state 3

    html        go to state 9
    head        go to state 10
    misctop     go to state 5
    consumetop  go to state 11


State 3

   30 misctop: COMMENT .

    $default  reduce using rule 30 (misctop)


State 4

    0 $accept: st . $end

    $end  shift, and go to state 12


State 5

   32 consumetop: misctop .

    $default  reduce using rule 32 (consumetop)


State 6

    3 st: consumetop . DOCTYPE HTMLOP html
    4   | consumetop . HTMLOP html
    5   | consumetop . DOCTYPE consumetop HTMLOP html
   31 consumetop: consumetop . misctop

    DOCTYPE  shift, and go to state 13
    HTMLOP   shift, and go to state 14
    COMMENT  shift, and go to state 3

    misctop  go to state 15


State 7

    1 st: DOCTYPE HTMLOP . html

    HEADOP   shift, and go to state 8
    COMMENT  shift, and go to state 3

    html        go to state 16
    head        go to state 10
    misctop     go to state 5
    consumetop  go to state 11


State 8

    8 head: HEADOP . title HEADCL
    9     | HEADOP . HEADCL
   10     | HEADOP . consumetop HEADCL

    HEADCL   shift, and go to state 17
    TITLEOP  shift, and go to state 18
    COMMENT  shift, and go to state 3

    title       go to state 19
    misctop     go to state 5
    consumetop  go to state 20


State 9

    2 st: HTMLOP html .

    $default  reduce using rule 2 (st)


State 10

    6 html: head . body HTMLCL
    7     | head . body HTMLCL consumetop

    BODYOP   shift, and go to state 21
    COMMENT  shift, and go to state 3

    body        go to state 22
    misctop     go to state 5
    consumetop  go to state 23


State 11

   11 head: consumetop . HEADOP title HEADCL
   12     | consumetop . HEADOP HEADCL
   13     | consumetop . HEADOP consumetop HEADCL
   31 consumetop: consumetop . misctop

    HEADOP   shift, and go to state 24
    COMMENT  shift, and go to state 3

    misctop  go to state 15


State 12

    0 $accept: st $end .

    $default  accept


State 13

    3 st: consumetop DOCTYPE . HTMLOP html
    5   | consumetop DOCTYPE . consumetop HTMLOP html

    HTMLOP   shift, and go to state 25
    COMMENT  shift, and go to state 3

    misctop     go to state 5
    consumetop  go to state 26


State 14

    4 st: consumetop HTMLOP . html

    HEADOP   shift, and go to state 8
    COMMENT  shift, and go to state 3

    html        go to state 27
    head        go to state 10
    misctop     go to state 5
    consumetop  go to state 11


State 15

   31 consumetop: consumetop misctop .

    $default  reduce using rule 31 (consumetop)


State 16

    1 st: DOCTYPE HTMLOP html .

    $default  reduce using rule 1 (st)


State 17

    9 head: HEADOP HEADCL .

    $default  reduce using rule 9 (head)


State 18

   14 title: TITLEOP . TITLECL
   15      | TITLEOP . consumetext TITLECL
   18      | TITLEOP . TITLECL consumetop
   19      | TITLEOP . consumetext TITLECL consumetop

    TITLECL  shift, and go to state 28
    TEXT     shift, and go to state 29

    misctext     go to state 30
    consumetext  go to state 31


State 19

    8 head: HEADOP title . HEADCL

    HEADCL  shift, and go to state 32


State 20

   10 head: HEADOP consumetop . HEADCL
   16 title: consumetop . TITLEOP TITLECL
   17      | consumetop . TITLEOP consumetext TITLECL
   20      | consumetop . TITLEOP TITLECL consumetop
   21      | consumetop . TITLEOP consumetext TITLECL consumetop
   31 consumetop: consumetop . misctop

    HEADCL   shift, and go to state 33
    TITLEOP  shift, and go to state 34
    COMMENT  shift, and go to state 3

    misctop  go to state 15


State 21

   22 body: BODYOP . flow BODYCL
   23     | BODYOP . BODYCL
   26     | BODYOP . flow BODYCL consumetop
   27     | BODYOP . BODYCL consumetop

    BODYCL     shift, and go to state 35
    BPHRASEOP  shift, and go to state 36
    GTPHOP     shift, and go to state 37
    TEXT       shift, and go to state 38
    AOP        shift, and go to state 39
    DIVOP      shift, and go to state 40
    IMGOP      shift, and go to state 41
    FONTOP     shift, and go to state 42
    LOP        shift, and go to state 43
    FIGOP      shift, and go to state 44
    DLOP       shift, and go to state 45
    TABOP      shift, and go to state 46
    BR         shift, and go to state 47
    COMMENT    shift, and go to state 48
    SYMBOL     shift, and go to state 49
    CENTEROP   shift, and go to state 50

    misc  go to state 51
    flow  go to state 52


State 22

    6 html: head body . HTMLCL
    7     | head body . HTMLCL consumetop

    HTMLCL  shift, and go to state 53


State 23

   24 body: consumetop . BODYOP flow BODYCL
   25     | consumetop . BODYOP BODYCL
   28     | consumetop . BODYOP flow BODYCL consumetop
   29     | consumetop . BODYOP BODYCL consumetop
   31 consumetop: consumetop . misctop

    BODYOP   shift, and go to state 54
    COMMENT  shift, and go to state 3

    misctop  go to state 15


State 24

   11 head: consumetop HEADOP . title HEADCL
   12     | consumetop HEADOP . HEADCL
   13     | consumetop HEADOP . consumetop HEADCL

    HEADCL   shift, and go to state 55
    TITLEOP  shift, and go to state 18
    COMMENT  shift, and go to state 3

    title       go to state 56
    misctop     go to state 5
    consumetop  go to state 57


State 25

    3 st: consumetop DOCTYPE HTMLOP . html

    HEADOP   shift, and go to state 8
    COMMENT  shift, and go to state 3

    html        go to state 58
    head        go to state 10
    misctop     go to state 5
    consumetop  go to state 11


State 26

    5 st: consumetop DOCTYPE consumetop . HTMLOP html
   31 consumetop: consumetop . misctop

    HTMLOP   shift, and go to state 59
    COMMENT  shift, and go to state 3

    misctop  go to state 15


State 27

    4 st: consumetop HTMLOP html .

    $default  reduce using rule 4 (st)


State 28

   14 title: TITLEOP TITLECL .
   18      | TITLEOP TITLECL . consumetop

    COMMENT  shift, and go to state 3

    $default  reduce using rule 14 (title)

    misctop     go to state 5
    consumetop  go to state 60


State 29

   33 misctext: TEXT .

    $default  reduce using rule 33 (misctext)


State 30

   35 consumetext: misctext .

    $default  reduce using rule 35 (consumetext)


State 31

   15 title: TITLEOP consumetext . TITLECL
   19      | TITLEOP consumetext . TITLECL consumetop
   34 consumetext: consumetext . misctext

    TITLECL  shift, and go to state 61
    TEXT     shift, and go to state 29

    misctext  go to state 62


State 32

    8 head: HEADOP title HEADCL .

    $default  reduce using rule 8 (head)


State 33

   10 head: HEADOP consumetop HEADCL .

    $default  reduce using rule 10 (head)


State 34

   16 title: consumetop TITLEOP . TITLECL
   17      | consumetop TITLEOP . consumetext TITLECL
   20      | consumetop TITLEOP . TITLECL consumetop
   21      | consumetop TITLEOP . consumetext TITLECL consumetop

    TITLECL  shift, and go to state 63
    TEXT     shift, and go to state 29

    misctext     go to state 30
    consumetext  go to state 64


State 35

   23 body: BODYOP BODYCL .
   27     | BODYOP BODYCL . consumetop

    COMMENT  shift, and go to state 3

    $default  reduce using rule 23 (body)

    misctop     go to state 5
    consumetop  go to state 65


State 36

   49 flow: BPHRASEOP . phraseopen

    BPHRASECL  shift, and go to state 66
    PHRASEOP   shift, and go to state 67
    TEXT       shift, and go to state 38
    AOP        shift, and go to state 68
    IMGOP      shift, and go to state 41
    FONTOP     shift, and go to state 69
    BR         shift, and go to state 47
    COMMENT    shift, and go to state 48
    SYMBOL     shift, and go to state 49
    CENTEROP   shift, and go to state 70

    misc        go to state 71
    miscph      go to state 72
    consumeph   go to state 73
    phraseopen  go to state 74
    phrases     go to state 75


State 37

   50 flow: GTPHOP . gtph

    BPHRASEOP  shift, and go to state 76
    PHRASEOP   shift, and go to state 67
    GTPHCL     shift, and go to state 77
    TEXT       shift, and go to state 38
    AOP        shift, and go to state 68
    IMGOP      shift, and go to state 41
    FONTOP     shift, and go to state 69
    BR         shift, and go to state 47
    COMMENT    shift, and go to state 48
    SYMBOL     shift, and go to state 49
    CENTEROP   shift, and go to state 70

    misc       go to state 71
    miscph     go to state 72
    consumeph  go to state 78
    phrases    go to state 79
    gtph       go to state 80


State 38

   38 misc: TEXT .

    $default  reduce using rule 38 (misc)


State 39

   58 flow: AOP . atag

    AOPOP      shift, and go to state 81
    ATTRIBUTE  shift, and go to state 82

    atag  go to state 83


State 40

   54 flow: DIVOP . div

    BPHRASEOP  shift, and go to state 36
    GTPHOP     shift, and go to state 37
    TEXT       shift, and go to state 38
    AOP        shift, and go to state 39
    DIVOP      shift, and go to state 40
    DIVCL      shift, and go to state 84
    IMGOP      shift, and go to state 41
    FONTOP     shift, and go to state 42
    LOP        shift, and go to state 43
    FIGOP      shift, and go to state 44
    DLOP       shift, and go to state 45
    TABOP      shift, and go to state 46
    BR         shift, and go to state 47
    COMMENT    shift, and go to state 48
    SYMBOL     shift, and go to state 49
    CENTEROP   shift, and go to state 50

    misc  go to state 51
    flow  go to state 85
    div   go to state 86


State 41

   39 misc: IMGOP . img

    ATTRIBUTE  shift, and go to state 87
    IMGCL      shift, and go to state 88

    img  go to state 89


State 42

   59 flow: FONTOP . font

    ATTRIBUTE  shift, and go to state 90
    FONTOOP    shift, and go to state 91

    font  go to state 92


State 43

   51 flow: LOP . list

    TEXT     shift, and go to state 38
    IMGOP    shift, and go to state 41
    LCL      shift, and go to state 93
    LIOP     shift, and go to state 94
    BR       shift, and go to state 47
    COMMENT  shift, and go to state 48
    SYMBOL   shift, and go to state 49

    misc     go to state 95
    consume  go to state 96
    list     go to state 97


State 44

   57 flow: FIGOP . figure

    BPHRASEOP  shift, and go to state 36
    GTPHOP     shift, and go to state 37
    TEXT       shift, and go to state 38
    AOP        shift, and go to state 39
    DIVOP      shift, and go to state 40
    IMGOP      shift, and go to state 41
    FONTOP     shift, and go to state 42
    LOP        shift, and go to state 43
    FIGOP      shift, and go to state 44
    FIGCL      shift, and go to state 98
    FIGCAPOP   shift, and go to state 99
    DLOP       shift, and go to state 45
    TABOP      shift, and go to state 46
    BR         shift, and go to state 47
    COMMENT    shift, and go to state 48
    SYMBOL     shift, and go to state 49
    CENTEROP   shift, and go to state 50

    misc    go to state 51
    flow    go to state 100
    figure  go to state 101


State 45

   55 flow: DLOP . dl

    TEXT     shift, and go to state 38
    DIVOP    shift, and go to state 102
    IMGOP    shift, and go to state 41
    DLCL     shift, and go to state 103
    DTOP     shift, and go to state 104
    BR       shift, and go to state 47
    COMMENT  shift, and go to state 48
    SYMBOL   shift, and go to state 49

    misc     go to state 95
    consume  go to state 105
    dl       go to state 106


State 46

   56 flow: TABOP . table

    TEXT     shift, and go to state 38
    IMGOP    shift, and go to state 41
    TABCL    shift, and go to state 107
    CAPOP    shift, and go to state 108
    TROP     shift, and go to state 109
    BR       shift, and go to state 47
    COMMENT  shift, and go to state 48
    SYMBOL   shift, and go to state 49

    misc     go to state 95
    consume  go to state 110
    table    go to state 111


State 47

   37 misc: BR .

    $default  reduce using rule 37 (misc)


State 48

   36 misc: COMMENT .

    $default  reduce using rule 36 (misc)


State 49

   40 misc: SYMBOL .

    $default  reduce using rule 40 (misc)


State 50

   60 flow: CENTEROP . center

    BPHRASEOP  shift, and go to state 36
    GTPHOP     shift, and go to state 37
    TEXT       shift, and go to state 38
    AOP        shift, and go to state 39
    DIVOP      shift, and go to state 40
    IMGOP      shift, and go to state 41
    FONTOP     shift, and go to state 42
    LOP        shift, and go to state 43
    FIGOP      shift, and go to state 44
    DLOP       shift, and go to state 45
    TABOP      shift, and go to state 46
    BR         shift, and go to state 47
    COMMENT    shift, and go to state 48
    SYMBOL     shift, and go to state 49
    CENTEROP   shift, and go to state 50
    CENTERCL   shift, and go to state 112

    misc    go to state 51
    flow    go to state 113
    center  go to state 114


State 51

   52 flow: misc . flow
   53     | misc .

    BPHRASEOP  shift, and go to state 36
    GTPHOP     shift, and go to state 37
    TEXT       shift, and go to state 38
    AOP        shift, and go to state 39
    DIVOP      shift, and go to state 40
    IMGOP      shift, and go to state 41
    FONTOP     shift, and go to state 42
    LOP        shift, and go to state 43
    FIGOP      shift, and go to state 44
    DLOP       shift, and go to state 45
    TABOP      shift, and go to state 46
    BR         shift, and go to state 47
    COMMENT    shift, and go to state 48
    SYMBOL     shift, and go to state 49
    CENTEROP   shift, and go to state 50

    $default  reduce using rule 53 (flow)

    misc  go to state 51
    flow  go to state 115


State 52

   22 body: BODYOP flow . BODYCL
   26     | BODYOP flow . BODYCL consumetop

    BODYCL  shift, and go to state 116


State 53

    6 html: head body HTMLCL .
    7     | head body HTMLCL . consumetop

    COMMENT  shift, and go to state 3

    $default  reduce using rule 6 (html)

    misctop     go to state 5
    consumetop  go to state 117


State 54

   24 body: consumetop BODYOP . flow BODYCL
   25     | consumetop BODYOP . BODYCL
   28     | consumetop BODYOP . flow BODYCL consumetop
   29     | consumetop BODYOP . BODYCL consumetop

    BODYCL     shift, and go to state 118
    BPHRASEOP  shift, and go to state 36
    GTPHOP     shift, and go to state 37
    TEXT       shift, and go to state 38
    AOP        shift, and go to state 39
    DIVOP      shift, and go to state 40
    IMGOP      shift, and go to state 41
    FONTOP     shift, and go to state 42
    LOP        shift, and go to state 43
    FIGOP      shift, and go to state 44
    DLOP       shift, and go to state 45
    TABOP      shift, and go to state 46
    BR         shift, and go to state 47
    COMMENT    shift, and go to state 48
    SYMBOL     shift, and go to state 49
    CENTEROP   shift, and go to state 50

    misc  go to state 51
    flow  go to state 119


State 55

   12 head: consumetop HEADOP HEADCL .

    $default  reduce using rule 12 (head)


State 56

   11 head: consumetop HEADOP title . HEADCL

    HEADCL  shift, and go to state 120


State 57

   13 head: consumetop HEADOP consumetop . HEADCL
   16 title: consumetop . TITLEOP TITLECL
   17      | consumetop . TITLEOP consumetext TITLECL
   20      | consumetop . TITLEOP TITLECL consumetop
   21      | consumetop . TITLEOP consumetext TITLECL consumetop
   31 consumetop: consumetop . misctop

    HEADCL   shift, and go to state 121
    TITLEOP  shift, and go to state 34
    COMMENT  shift, and go to state 3

    misctop  go to state 15


State 58

    3 st: consumetop DOCTYPE HTMLOP html .

    $default  reduce using rule 3 (st)


State 59

    5 st: consumetop DOCTYPE consumetop HTMLOP . html

    HEADOP   shift, and go to state 8
    COMMENT  shift, and go to state 3

    html        go to state 122
    head        go to state 10
    misctop     go to state 5
    consumetop  go to state 11


State 60

   18 title: TITLEOP TITLECL consumetop .
   31 consumetop: consumetop . misctop

    COMMENT  shift, and go to state 3

    $default  reduce using rule 18 (title)

    misctop  go to state 15


State 61

   15 title: TITLEOP consumetext TITLECL .
   19      | TITLEOP consumetext TITLECL . consumetop

    COMMENT  shift, and go to state 3

    $default  reduce using rule 15 (title)

    misctop     go to state 5
    consumetop  go to state 123


State 62

   34 consumetext: consumetext misctext .

    $default  reduce using rule 34 (consumetext)


State 63

   16 title: consumetop TITLEOP TITLECL .
   20      | consumetop TITLEOP TITLECL . consumetop

    COMMENT  shift, and go to state 3

    $default  reduce using rule 16 (title)

    misctop     go to state 5
    consumetop  go to state 124


State 64

   17 title: consumetop TITLEOP consumetext . TITLECL
   21      | consumetop TITLEOP consumetext . TITLECL consumetop
   34 consumetext: consumetext . misctext

    TITLECL  shift, and go to state 125
    TEXT     shift, and go to state 29

    misctext  go to state 62


State 65
